k8s/overlays/production/patches/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  template:
    spec:
      serviceAccountName: prometheus
