k8s/overlays/production/patches/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graph
  annotations:
    cert-manager.io/issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - graph.ykzts.sexy
    secretName: graph-cert
